feature/CMS-180 Refactor component and entry field handling with new DTOs and improved validation
- Introduced new DTOs for component translations and entry field definitions to enhance data handling.
- Updated CreateComponentCompositeRequest and UpdateComponentCompositeRequest to trim UID values.
- Refactored response structures in ComponentCompositeResponse and EntryFieldDefinitionResponse for consistency.
- Enhanced EntryFieldMapper to utilize new response DTOs.
- Improved validation logic in ComponentServiceImpl to handle null values more gracefully.
- Added new SQL seed data for footer components and updated existing migration scripts for clarity.

Files modified include various DTOs, services, mappers, and SQL seed scripts to streamline component and entry field management.